[gd_scene load_steps=3 format=3 uid="uid://d4t0ax0eb8va"]

[ext_resource type="Script" path="res://scripts/ui/plant_stat_changes_ui.gd" id="1_4f72o"]
[ext_resource type="PackedScene" uid="uid://x2tvmtbrhms3" path="res://scenes/ui/components/health_change_label.tscn" id="2_yvbfc"]

[node name="PlantStatChangesUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_4f72o")
health_label_scene = ExtResource("2_yvbfc")
health_positive_color = Color(0.77568, 1, 0.668955, 1)
health_negative_color = Color(1, 0.439701, 0.407215, 1)

[node name="HealthUpdateTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CenterMarker" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="timeout" from="HealthUpdateTimer" to="." method="_on_health_update_timer_timeout"]
